[tool.poetry]
name = "outchart"
version = "0.1.0"
description = "Darts Outchart Creator"
authors = ["Patrick Riley <patriley@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.4"
numpy = "^1.26.2"
matplotlib = "^3.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
